exports[`test Should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
     totalling 
    $1.45
  </h4>
</div>
`;

exports[`test Should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    3
     
    expenses
     totalling 
    $123.45
  </h4>
</div>
`;
